# nextspeaker

./: Cargo.toml  README.md  history.txt  index-58cee3615321fb3c.css  index-91697625f7e9d151.css  index-a4427ef65e0274e9.css  index-a6bf09ff3f7af286.css  index.html  nextspeaker-web-2106dbfc41f118bd.js  nextspeaker-web-212ce5e30132fdfd.js  nextspeaker-web-4287a506a8d16e6a.js  nextspeaker-web-4287a506a8d16e6a_bg.wasm  nextspeaker-web-43d45fb8b99fccb3.js  nextspeaker-web-43d45fb8b99fccb3_bg.wasm  nextspeaker-web-59ef539844ffb4d1.js  nextspeaker-web-59ef539844ffb4d1_bg.wasm  nextspeaker-web-78dbf3caf7883a7d.js  nextspeaker-web-838acf69b0e92806.js  nextspeaker-web-838acf69b0e92806_bg.wasm  nextspeaker-web-aa547a9ef1ed243a.js  nextspeaker-web-aa547a9ef1ed243a_bg.wasm  participants.txt  website-update.sh
dataviz/: plot.jl  runs.sh
nextspeaker-web/: Cargo.toml  index.html  index.scss  relativize-resources.sh
nextspeaker-web/src/: components.rs  main.rs  state.rs
src/: lib.rs  main.rs  selection.rs
