[package]
name = "nextspeaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.9", features = ["derive"] }
log = "0.4.19"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.11.1"
simple_logger = { version = "4.2.0", features = ["stderr"] }
