[package]
name = "nextspeaker-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
getrandom = { version = "0.2.10", features = ["js"] }
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
nextspeaker = { version = "0.1.0", path = ".." }
serde_derive = "1.0.188"
serde_json = "1.0.105"
sha2 = "0.10.7"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlTextAreaElement"] }
yew = { version = "0.20.0", features = ["csr"] }
